--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "engines": {
     "npm": ">=3.0.0"
   },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
+  },
   "peerDependencies": {
     "rax": "0.x"
   },
